--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -151,7 +151,7 @@ jobs:
         exit 1
 
   Windows:
-    runs-on: windows-latest
+    runs-on: windows-2022
     permissions:
       checks: write
       pull-requests: write
