--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -161,7 +161,7 @@ jobs:
       VULKAN_SDK: C:/VulkanSDK/1.3.231.1
     strategy:
       matrix:
-        platform: [x64, ARM64]
+        platform: [x64]
     defaults:
       run:
         shell: cmd
